objects/Case_Comment_Template__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When check box is unchecked Comment Template will not appear as option to the user to select.</description>
        <inlineHelpText>When check box is unchecked Comment Template will not appear as option to the user to select.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certificates</fullName>
                </value>
                <value>
                    <fullName>Course Records</fullName>
                </value>
                <value>
                    <fullName>Escalations</fullName>
                </value>
                <value>
                    <fullName>Handover Procedures</fullName>
                </value>
                <value>
                    <fullName>Instructors</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Offerings</fullName>
                </value>
                <value>
                    <fullName>Organizations</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Programs</fullName>
                </value>
                <value>
                    <fullName>Purchase Orders</fullName>
                </value>
                <value>
                    <fullName>RBC</fullName>
                </value>
                <value>
                    <fullName>Red Cross Store</fullName>
                </value>
                <value>
                    <fullName>TSC Support</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_Body__c</fullName>
        <label>Comment Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Case Comment Template</label>
    <nameField>
        <label>Case Comment Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Comment Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>